[package]
name = "rocket_sqlite_rw_pool"
version = "0.0.1-alpha1"
edition = "2021"
authors = ["Hasnain Lakhani <m.hasnain.lakhani@gmail.com>"]
categories = ["web-programming"]
description = "Read-Write SQLite pool for Rocket with query builder, migrations, and CSRF protection"
keywords = ["sql", "rocket"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mhlakhani/rocket_sqlite_rw_pool"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
futures = "0.3"
futures-core = "0.3"
inventory = "0.3"
itertools = "0.11"
tokio = { version = "1", features = ["full"] }
paste = "1.0"
rocket = { version = "0.5.0", features = [ "json", "secrets", "tls"] }
rocket_csrf_guard = "0.0.2"
r2d2 = "0.8"
r2d2_sqlite = "0.21"
rusqlite = { version = "0.28.0", features = ["bundled", "chrono", "modern_sqlite", "functions"] }
rusqlite_migration = "1.0"
rust-embed = { version = "6.4.0", features = ["include-exclude"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_rusqlite = "0.31"
thiserror = "1.0"
